# Android-CameraPreview

./: .gitignore  import-summary.txt
app/: build.gradle
app/src/androidTest/java/com/braincs/eglcamera/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/braincs/eglcamera/: CameraPreviewActivity.java  MainActivity.java
app/src/main/java/com/braincs/eglcamera/preview/: CameraConfigInfo.java  CameraParamSettingException.java  ChangbaRecordingPreviewScheduler.java  ChangbaRecordingPreviewView.java  ChangbaVideoCamera.java
app/src/main/jni/: Application.mk  CMakeLists.txt  ChangbaRecordingPreviewScheduler.cpp  build.sh
app/src/main/jni/camera_preview/: CMakeLists.txt  build_shared.sh  build_static.sh  mv_recording_preview_controller.cpp  mv_recording_preview_controller.h  recording_preview_renderer.cpp  recording_preview_renderer.h
app/src/main/jni/libcommon/: .gitignore  CMakeLists.txt  CommonTools.h  build_shared.sh  build_static.sh  matrix.h
app/src/main/jni/libcommon/egl_core/: egl_core.cpp  egl_core.h  egl_share_context.h
app/src/main/jni/libcommon/message_queue/: handler.h  message_queue.cpp
app/src/main/jni/libcommon/opengl_media/render/: video_gl_surface_render.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/braincs/eglcamera/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
